1-hello.yaml
apiVersion: v1
kind: Pod
metadata:
  name: hello
spec:
  containers:
    - name: hello
      image: node:14
      command: ["/bin/bash", "-c", "--"]
      args:
        [
          'node -e "console.log(''Hello''); setTimeout(() => console.log(''Terminating''), 5000);"',
        ]
