5-front.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: front
  labels:
    app: handsonk8s
spec:
  replicas: 2
  selector:
    matchLabels:
      section: front
  template:
    metadata:
      labels:
        app: handsonk8s
        section: front
    spec:
      containers:
        - name: front
          image: joellord/handsonk8s-front:lastest
          ports:
            - containerPort: 8080
