8-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  labels:
    app: handsonk8s
spec:
  replicas: 1
  selector:
    matchLabels:
      section: api
  template:
    metadata:
      labels:
        app: handsonk8s
        section: api
    spec:
      containers:
        - name: api
          image: joellord/handsonk8s-api:latest
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: api
  labels:
    app: handsonk8s
spec:
  selector:
    section: api
  ports:
    - port: 3000
      protocol: TCP
